24 April 2007
+ Bug 1705106 - Fixed install.sql typo

18 April 2007
+ Added Forgot password and Forgot username functionality
+ Updated files: templates/forms/reset_password.tpl,
  templates/forms/forgot.tpl


17 April 2007
+ Started password reset and user name reminder options.
+ Added comments to user menu template to prevent extra characters
+ Updated files: conf/config.php, templates/usermenus/top.tpl,
  templates/forms/forgot.tpl 


16 April 2007
+ Implemented RFE 1628318 - Remember me option on users module.
+ Rewrote logout functionality to work with remember me
+ Updated files: conf/config.php, templates/forms/settings.tpl,
  templates/my_page/user_setting.tpl
+ Hitting user's index.php forwards to the 404 page


11 April 2007
+ Removed redundant class calls in init.php


6 April 2007
+ Changed default username size to 3

5 April 2007
+ Updated translation functions.

4 April 2007
+ Changed form names on login templates since both have ids and may
  appear on same page.
+ Removed return by reference from Current_User::getUserObj

2 April 2007
+ Changed popuppermission to echo error instead of using goback
  function.
+ Fixed error code call in Permissions.php. Needed to call core code.
+ Added German translation files

Version 2.3.2
------------------------------------------------------------------

13 March 2007
+ Found template typo that broke IE login.
+ Updated file: templates/user_main.tpl

7 March 2007
+ Removed fake French translation.
+ Ordered permissions alphabetically (FR #1665183).

5 March 2007
+ Changed control panel icon
+ Added error check to login.
+ isUser will now always return false if passed a zero id.
+ Added new function requireLogin that forwards a user to the login
  screen


Version 2.3.1
-------------------------------------------------------------------
23 February 2007
+ Added ability for user to choose their preferred editor.
+ Updated files: templates/my_page/user_setting.tpl


Version 2.3.0